@@ -669,6 +669,35 @@ int AtomInfoSameResidue(AtomInfoType *at1,AtomInfoType *at2)
   return 0;
 }
 
+int AtomInfoSequential(AtomInfoType *at1,AtomInfoType *at2)
+{
+  char last1=0,last2=0;
+  char ch;
+  char *p;
+  if(at1->hetatm==at2->hetatm)
+    if(at1->chain[0]==at2->chain[0])
+      if(WordMatch(at1->segi,at2->segi,true)<0) 
+        if(at1->resv==at2->resv) {
+          at1->resi;
+          p=at1->resi;
+          while(*p) {
+            last1=(*p++);
+          }
+          p=at2->resi;
+          while(*p) {
+            last2=(*p++);
+          }
+          if(last1==last2)
+            return 1;
+          if((last1+1)==last2)
+            return 1;
+        } else {
+          if((at1->resv+1)==at2->resv)
+            return 1;
+        }
+  return 0;
+}
+
 int AtomInfoMatch(AtomInfoType *at1,AtomInfoType *at2)
 {
   if((tolower(at1->chain[0]))==(tolower(at2->chain[0])))
