@@ -143,6 +143,7 @@ int AtomInfoAltMatch(AtomInfoType *at1,AtomInfoType *at2);
 int AtomInfoCompare(AtomInfoType *at1,AtomInfoType *at2);
 float AtomInfoGetBondLength(AtomInfoType *ai1,AtomInfoType *ai2);
 int AtomInfoSameResidue(AtomInfoType *at1,AtomInfoType *at2);
+int AtomInfoSequential(AtomInfoType *at1,AtomInfoType *at2);
 
 void AtomInfoBracketResidue(AtomInfoType *ai0,int n0,AtomInfoType *ai,int *st,int *nd);
 void AtomInfoBracketResidueFast(AtomInfoType *ai0,int n0,int cur,int *st,int *nd);
